# Chesster

./: README.md  initial_state  record.josn  requirements.txt  setup.cfg  setup.py  test.py
src/chesster/: __init__.py
src/chesster/ai/: ARCAI.py  __init__.py  base.py  bayley.py  human.py  jeffbot.py  joshai.py  random.py  sid.py  test.py  tyler_westland.py  wayne.py
src/chesster/ai/models/jeffbot/: saved_model.pb
src/chesster/ai/models/jeffbot/variables/: variables.index
src/chesster/cli/: __init__.py
src/chesster/game/: __init__.py  base.py  exceptions.py  headless.py  terminal.py  visual.py
src/chesster/match/: __init__.py  base.py  headless.py  terminal.py  visual.py
src/chesster/records/: __init__.py  game.py  match.py  move.py  result.py
src/chesster/timer/: __init__.py  base.py  basic.py  bronstein.py  increment.py
