[metadata]
name = chesster
author = Tyler Westland
author-email = tylerofthewest@gmail.com
url = https://github.com/UC-Mind-Lab/Chesster
description = Facilitates custom AI's to battle with chess
long-description = file: README.md, LICENSE
license = GNU General Public License, Version 3.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

[options]
python_requires = >= 3.6
install_requires =
  chess >= 1.3.1
  cairosvg >= 2.5.0
  pygame >= 2.0.0
  pillow >= 8.0.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

